* strata.labels are checked to make sure that they are all single characters
* added explicit test to make sure file exists in import.chdata and convert.inp

BUG FIXES
* popan.derived was not handling loss on captures correctly because it was summing frequencies without taking absolute values. This was fixed in this version.

RMark 2.1.9 (6 Oct 2014)
--------------------------
CHANGES 
* For closed full likelihood models the parameter is named f0 instead of N

BUG FIXES
* Excepted mark-resight LogitNormal from check on all 0 capture histories because they are allowed for those models. Thanks to Brian Taras for pointing out the problem.
* Fixed bug in make.mark.model which could be fooled by when "initial " was found in a formula and it was expecting initial parameter values. Thanks to Christian Kampichler for pointing out the problem.


RMark 2.1.8 (26 June 2014)
--------------------------
NEW FEATURES
* A new return value was added to covariate.predictions which provides for each model a dataframe with the estimates and std errors for that model. Also, warnings are issued for parameters that have a negative or 0 variance. Those with a negative variance are set to 0. This same behavior was added to model.average.list.
* Time intervals are checked for robust design to make sure there are at least 2 secondary occasions per primary session.
 
CHANGES 
* Modified get.real to remove par.index and model.index from design data before appending to estimates to avoid multiple field names with same name/value