@@ -5,6 +5,7 @@ CHANGES
 * extract.mark.output, mark, run.mark.model, mark.wrapper, and mark.wrapper.parallel were modified so that all messages are suppressed when silent=TRUE and if there was an error with the MARK run it does not pop open editor with the output file.
 * strata.labels are checked to make sure that they are all single characters
 * added explicit test to make sure file exists in import.chdata and convert.inp
+* added checks to make.mark.model that make sure design data rows have not been deleted because this is no longer supported. Also check to make sure the rows are in their proper order.
 
 BUG FIXES
 * popan.derived was not handling loss on captures correctly because it was summing frequencies without taking absolute values. This was fixed in this version.
